# triangle_intersections

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  main.cpp  orientTemplated.cpp  orientTemplated.h  test.txt  tri_tri_intersect.cpp  tri_tri_intersect.h
